Fix another minor spacing issue

--- a/static/style.css
+++ b/static/style.css
@@ -224,6 +224,10 @@ p.flash {
     margin-top:0;
 }
 
+p#addRecord {
+    padding-top:.5em;
+}
+
 div#eventRecordForm {
     width:17em;
     float:left;
